duck/test/fail/ambiguous_delay.duck
import base

main = exit 0

f :: Delayed Int -> Int -> Int
f _ y = y

f :: Int -> Char -> Char
f _ y = y

_ = f 0
_ = f '0'
